[workspace]

members = [
    "./crates/istring",
    "./crates/hash",
    "./crates/buffer",
    "./crates/allocator",
    "./crates/profile",
    "./crates/concurrent",
    "./crates/container",
    "./crates/math",
    "./crates/log"
]

exclude = [
  "test"
]

resolver = "2"

[profile.dev]
debug = 2

[profile.release]
opt-level=3
debug = 0
