[workspace]

members = [
    "./crates/istring",
    "./crates/hash",
    "./crates/buffer",
    "./crates/allocator",
    "./crates/profile",
    "./crates/profile_proc_macro",
    "./crates/concurrent",
    "./crates/container",
    "./crates/math",
    "./crates/log",
    "./crates/database",
    "./crates/language"
]

exclude = [
  "test"
]

resolver = "2"

[profile.dev]
debug = 2

[profile.release]
opt-level=3
debug = 0
